--- a/web/prisma/tsconfig.json
+++ b/web/prisma/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "es2015",
     "types": ["node"]
   },
   "include": ["seed.ts"]
