--- a/web/package.json
+++ b/web/package.json
@@ -45,6 +45,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-react": "^5.30.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.180.0",
@@ -61,6 +63,8 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-react": "^5.18.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
